--- a/app/styles/wallpaperCard.css
+++ b/app/styles/wallpaperCard.css
@@ -377,3 +377,36 @@
 .suggestions-container:not(:empty) ~ .firebase-wallpaper-card:hover .firebase-wallpaper-image {
   transform: none;
 }
+
+.delete-button {
+  position: absolute;
+  top: 14px;
+  right: 10px;
+  z-index: 10;
+  border: none;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  transition: all 0.3s ease;
+  opacity: 0;
+  transform: translateY(-10px);
+  background: none;
+}
+
+.firebase-wallpaper-card:hover .delete-button {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.delete-button:hover {
+  transform: scale(1.1) !important;
+}
+
+.delete-button svg {
+  width: 100%;
+  height: 100%;
+}
