--- a/app/styles/explore.css
+++ b/app/styles/explore.css
@@ -2,7 +2,7 @@
     font-size: 2.5rem;
     font-weight: 800;
     color: var(--theme-color);
-    margin: 2rem auto 1.5rem;
+    margin: 2rem auto 2.5rem !important;
     text-align: center;
     letter-spacing: -0.5px;
     max-width: 90%;
