--- a/app/styles/wallpaperCard.css
+++ b/app/styles/wallpaperCard.css
@@ -382,7 +382,7 @@
   position: absolute;
   top: 12px;
   right: 12px;
-  z-index: 10;
+  z-index: 1;
   border: none;
   width: 40px;
   height: 40px;
@@ -405,6 +405,7 @@
 .firebase-wallpaper-card:hover .delete-button {
   opacity: 1;
   transform: translateY(0);
+  pointer-events: none;
 }
 
 .delete-button:hover {
